nginx-plus-realtime-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nginx-ingress
  name: nginx-plus-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.k4.nginx.rocks
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plus-nginx-ingress
            port:
              number: 8080
